Fix extension build priming and OCI metrics export (#142)
* Prime Helidon builds only for SNAPSHOT versions

* Preserve release staging without a priming cache

* Fix OCI metrics export after metric scope removal

* Correct OCI metric unit conversion and description metadata

* Align Helidon 4.x dependencies to 4.5.4